<package format="3">
<name>interfaces</name>
<version>0.0.0</version>
<description>Custom Interfaces used for rho</description>
<maintainer email="rautnalin@gmail.com">nalin</maintainer>
<license>BSD-3</license>

<build_depend>rosidl_default_generators</build_depend>

<exec_depend>rosidl_default_runtime</exec_depend>

<member_of_group>rosidl_interface_packages</member_of_group>